2001-05-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_loopfilter.c (local_clock): One more attempt at
	"improving" the panic message.

2001-05-26  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in (ac_cv_func_ctty_for_f_setown): BSDI3 needs a ctty
	for F_SETOWN, too.
	From: Paul A Vixie <vixie@mfnx.net>

2001-05-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/ntpd.htm: Typo.
	From: John Stone <johns@ks.uiuc.edu>

2001-05-23  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k39

	* ntpd/ntp_loopfilter.c (local_clock): huffpuff cleanup/improvements.
	(huffpuff): Cleanup/improvements.
	(loop_config): huffpuff initialization cleanup/improvements.
	From: Dave Mills, Terje, Mark, and John?

2001-05-22  Harlan Stenn  <stenn@whimsy.udel.edu>

	* html/release.htm:
	* html/ntpd.htm:
	* html/miscopt.htm:
	From: Dave Mills: Updates.

2001-05-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k38

	* ntpd/ntp_proto.c (clock_filter): Huff-n-Puff and Popcorn
	improvements.
	* ntpd/ntp_loopfilter.c (local_clock): Debug cleanup
	From: Dave Mills.

	* include/ntp_syscall.h (ntp_gettime): Updated patch from Ulrich.
	My original attempt was not backwards compatible.

2001-05-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* include/ntp_syscall.h (ntp_gettime): Fill in the tai member.
	From: Ulrich Windl <Ulrich.Windl@rz.uni-regensburg.de>

	* configure.in: 4.0.99k37

	* ntpd/ntp_proto.c (clock_filter): Lose "off", xtemp and ytemp,
	and some obsoleted calculations.  Set the peer->offset and
	peer->delay from the filter stages.

	* ntpd/ntp_loopfilter.c: Comment/document improvements.
	(local_clock): correct the offset by one-half the difference
	between the sample delay and minimum delay.  Lose "mu" from the
	debug message.
	From: Dave Mills.

2001-05-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k36

	* ntpd/ntp_loopfilter.c: Huff-n-puff cleanup
	From: Dave Mills.

2001-05-14  Harlan Stenn  <stenn@whimsy.udel.edu>
