@@ -1,5 +1,10 @@
 2001-05-27  Harlan Stenn  <stenn@whimsy.udel.edu>
 
+	* ntpd/refclock_true.c:
+	* kernel/sys/pcl720.h:
+	Add support for the XL clock to refclock_true.c 
+	From: Paul A Vixie <vixie@mfnx.net> 
+
 	* ntpd/ntp_loopfilter.c (local_clock): One more attempt at
 	"improving" the panic message.
 
